Workshop04/weather-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: weather-deploy
   labels:
      name: weather-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: weather-pod
  template:
    metadata:
      name: weather-pod
      labels:
        name: weather-pod
    spec:
      containers:
      - name: weather-container
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
        - name: weather-port
          containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "16Mi"
