Workshop04/demo-svc-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-svc
spec:
  selector:
    name: fortuneapp
  type: ClusterIP
  ports:
  - port: 80
    targetPort: fortune-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-deploy
  labels:
    name: fortune-deploy
spec:
   replicas: 1
   selector:
      matchLabels:
         name: fortuneapp
   template:
      metadata:
         name: fortuneapp
         labels:
            name: fortuneapp
      spec:
        containers:
        - name: fortuneapp
          image: stackupiss/fortune:v1
          imagePullPolicy: Always
          ports:
          - name: fortune-port
            containerPort: 3000
          resources:
            requests:
              cpu: .25
              memory: "64Mi"
            limits:
              cpu: .25
              memory: "64Mi"
