Workshop04/weather-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-svc
  labels:
    name: weather-svc
spec:
  type: ClusterIP
  selector:
    name: weather-pod
  ports:
  - name: weather-http
    port: 80
    targetPort: weather-port
