Workshop04/demo-gw-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fortune-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "fortuneapp.157.230.193.69.nip.io"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortune-vs
spec:
  hosts:
  - "*"
  gateways:
  - fortune-gw
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: fortune-svc
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /app1
    route:
    - destination:
        host: myapp-svc-v1
    rewrite:
      uri: /
  - match:
    - uri:
        exact: /app2
    route:
    - destination:
        host: myapp-svc-v2.default.svc.cluster.local
  - match:
    - uri:
        exact: /random
    route:
    - destination:
        host: fortune-svc
      weight: 33
    - destination:
        host: myapp-svc-v1
      weight: 67
    rewrite:
      uri: /
